# runebook

./: .gitignore  .npmignore  ANALYSIS_LADDER.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION.md  INTEGRATIONS.md  LICENSE  MEMORY.md  NIXOS.md  QUICKSTART.md  README.md  RELEASE.md  ROADMAP.md  ValidationChecklist.md  deno.json  flake.nix  nixos-module.nix  package-lock.json  package.json  playwright.config.ts  shell.nix  vite.config.js  vitest.config.ts
.github/: WORKFLOWS.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: release-checklist.md
.github/workflows/: ci.yml  commitlint.yml  copilot-pr-lifecycle.yml  (+8 more)
coverage/: coverage-final.json  index.html
docs/: ROADMAP.md  demo.md  llm-integration.md  parallel-execution-plan.md
e2e/: canvas-load.spec.ts  canvas-persistence.spec.ts  canvas-viewport.spec.ts  node-lifecycle.spec.ts  reactive-data-flow.spec.ts  smoke.spec.ts  terminal.spec.ts
integrations/: README.md  demo-steps.sh  nvim-runebook.lua  tmux-status.sh  vim-runebook.vim  wezterm-status-simple.lua  wezterm-status.lua
scripts/: check-versions.cjs  demo.sh
src/: app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agents/: agent1.rs  agent2.rs  agent3.rs  agent4.rs  agent5.rs  agent6.rs  base.rs  mod.rs
src-tauri/src/core/: coordination.rs  mod.rs  ownership.rs  types.rs
src-tauri/src/execution/: mod.rs  runner.rs
src-tauri/src/memory/: api.rs  client.rs  encryption.rs  migration.rs  mod.rs  schema.rs  tests.rs
src-tauri/src/orchestrator/: coordinator.rs  mod.rs  planner.rs
(+187 files in other folders)
